# predict-albedo

./: CONSTANTS.py  README.md  pyproject.toml  train.py
data/input/meta/: std.csv
